fixed glowing overflow

--- a/src/components/ZNALink/ZNALink.module.css
+++ b/src/components/ZNALink/ZNALink.module.css
@@ -44,8 +44,8 @@
 	left: 50%;
 	-webkit-transform: translate(-50%);
 	transform: translate(-50%);
-	width: calc(100% - 24px);
-	box-shadow: 0 0 20px 13px #3ca1ff;
+	width: calc(100% - 28px);
+	box-shadow: 1px 2px 16px 10px #3ca1ff;
 	z-index: -1;
 }
 
